// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToolbarButton /> is rendered - default 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-EuiButton"
  intl="[object Object]"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate"
    >
      Create chart
    </span>
  </span>
</button>
`;

exports[`<ToolbarButton /> is rendered - primary 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
  intl="[object Object]"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate"
    >
      Create chart
    </span>
  </span>
</button>
`;
